--- a/package.json
+++ b/package.json
@@ -35,5 +35,5 @@
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
   },
-  "homepage": "https://mmtrabya.github.io/portfolio-Website/"
+  "homepage": "https://mmtrabya.github.io/Portfolio-Website/"
 }
